--- a/team_data.yml
+++ b/team_data.yml
@@ -341,6 +341,30 @@
       figure_en_name: "003"
       name: "小伍"
       intro: "顧問。新北人。任職於公股銀行的小伍，在穩定的生活之中，他的創作爆發力無處釋放。他希望透過桌遊表達自己的理念、精神，其發表的政治桌遊「美麗島風雲」為台灣本土桌遊中最暢銷的作品，同時他也是2014年柯P「溫蒂妮桌遊」的製作者。"
+    -
+      figure_en_name: "004"
+      name: "點石設計"
+      intro: "點石長期與國內外頂尖藝文團體合作，曾入圍第 52 屆葛萊美「最佳包裝設計獎」、第 24 屆金曲獎「最佳唱片包裝獎」、第 13 屆美國獨立音樂獎「最佳唱片包裝設計獎」"
+    -
+      figure_en_name: "005"
+      name: "熊"
+      intro: "畫圖永遠是自己最單純、純粹的快樂。旅行和速寫是大部份作品的養分。從西班牙到秘魯、或是夢境般的甘南草原，旅行時碰到的人和景給了在台灣沒法得到的東西，透過旅行時感受到的事物，漸漸地塑造作品風格。每一次作品從發想到完成，都經過好幾次轉變，有的來得突然，來得驚喜，就像旅行，永遠都有新的變化和美好的插曲，也像是場 live 演奏，永遠是那麼自由而不受拘束。"
+    -
+      figure_en_name: "006"
+      name: "陳青琳 KIM"
+      intro: "設計師，新北人。2012 成立深度設計承接網站、平面、影片、插畫案子，其餘時間則進行創作。希望能用精緻的插畫繪製卡牌，描繪出當時武將們的武勇身影，也希望藉由這個有趣的案子更體會歷史與桌遊的精采結合。"
+    -
+      figure_en_name: "007"
+      name: "搖滾貓"
+      intro: "還是小學生時，看了七龍珠跟幽遊白書後被啓蒙，決定成為漫畫家。十多年後，受了正統美術教育，卻茫然不知未來在哪， 想起小時候的自己，決定回歸初心當個說故事的漫畫家。 因為桌遊《美麗島風雲》被廣為認識，只好名片上註記：不是政治漫畫家。2015 年推出第一本漫畫單行本《無名歌》。在賣一億本之前，願為五斗米折腰，只要是覺得有趣的案子都會接。謝謝金主。"
+    -
+      figure_en_name: "008"
+      name: "BOWEN"
+      intro: "創意人／建築設計師／經紀人。嚴重過動不務正業，穿梭在各領域中，尋找有趣的事物。這次合作企圖將建築與空間的概念帶入骰塔的設計中，期許骰塔從遊戲配件翻轉為幕前主角。"
+    -
+      figure_en_name: "009"
+      name: "張承州"
+      intro: "河洛數位遊戲製作人。就讀研究所時，因為和朋友一起做的遊戲遭中華人民共和國文化局以「嚴重危害國家文化安全」封禁而登上新聞，於是半路出家投身遊戲業。目前任職於河洛數位有限公司，目標是能像KOEI一樣創作歷史模擬遊戲。作品有《民國無雙》、《中山立志傳》等歷史題材遊戲。"
 -
   en_name: "tailamsiok"
   slogan: "不只是孩子的，也是屬於大人的教育空間"
@@ -428,7 +452,7 @@
       intro: "道地台北人，曾經擔任電影導演，他所拍攝的電影長片在國際影展獲得最佳導演後，心中有一個疑惑：「台灣人的成就，為何總要外國人肯定才算肯定？」他不信邪，硬是帶著老婆與小孩，移居台南孔廟小巷內，三年前成立「layoo 來喲」真皮帆布包，尋找當地的裁縫老師傅合作，以台灣文化融合時尚設計，嘗試與台灣在地職人一起走出不同的路。"
 -
   en_name: "tea-sanpuku"
-  slogan: "五、六年級生走進山林，與茶和土地呼吸對話"
+  slogan: "六、七年級生走進山林，與茶和土地呼吸對話"
   name: "山不枯 Sanpuku"
   video: false
   map: "newtaipeicity"
@@ -438,8 +462,8 @@
   since: "2012"
   website: ""
   facebook_page: "https://www.facebook.com/tea.sanpuku"
-  preface: ""
-  member_amount: "以坪林的山林為起點，一群六、七年級生走進珍貴的台灣茶山，觀察茶樹的生長變化，紀錄茶農的製茶工藝。一點一滴，為逐漸失去人土關係的現代茶葉，探究茶園生態與好茶製成的平衡之道。"
+  preface: "以坪林的山林為起點，一群六、七年級生走進珍貴的台灣茶山，觀察茶樹的生長變化，紀錄茶農的製茶工藝。一點一滴，為逐漸失去人土關係的現代茶葉，探究茶園生態與好茶製成的平衡之道。"
+  member_amount: "4人"
   member:
     -
       figure_en_name: "001"
@@ -476,3 +500,68 @@
       figure_en_name: "001"
       name: "許佐夫 Jeff"
       intro: "多扶接送的創辦人，在投身無障礙服務前是紀錄片編導。在十二年的傳播製片工作中，對無障礙服務一無所知。直到有一天，Jeff 九十多歲的客家外婆生病受傷，需以輪椅代步後，他才赫然驚覺臺灣的環境對行動不便者非常不友善。因此，Jeff 毅然決然地投身無障礙服務，成立臺灣第一家民營的復康巴士。"
+-
+  en_name: "pangcahfarm"
+  slogan: "她一個人回到部落，找到一群好夥伴共同經營有機農場"
+  name: "邦查有機農場"
+  video: "https://www.youtube.com/watch?v=1GeiYTHBnYs"
+  map: "hualien"
+  location: "花蓮光復鄉"
+  address: "花蓮光復鄉馬太鞍部落"
+  category: "在地滋味"
+  since: "2008"
+  website: "http://pangcah.ilohas.info/"
+  facebook_page: "https://www.facebook.com/pangcahfarm"
+  preface: "在邦查有機農場裡，蘇秀蓮手把手教著農民如何播種。在這裡，有十餘位單親媽媽和中高齡失業的工作者，正在學習有機耕種的方法。未來，他們將成為有機耕種的推廣大使，在部落裡推廣有機農業。"
+  member_amount: "一個有機農場"
+  member:
+    -
+      figure_en_name: "SuXiulian"
+      name: "蘇秀蓮"
+      intro: "40歲，鶴岡部落阿美族人，邦查有機農場創辦人。年輕時在大台北四處打零工，1998年回到花蓮，希望透過務農尋求穩定的生活。個性風趣幽默，總是給身邊的人帶來歡笑。在蘇秀蓮溫暖的笑容背後，有一顆無比堅強的心，結束一段婚姻後，她靠著自己的力量開啟更燦爛的人生。"
+-
+  en_name: "succulentps"
+  slogan: "經過時空的鍛造，創造獨一無二的水泥花器"
+  name: "肉肉栽培研究所"
+  video: false
+  map: "kaohsiung"
+  location: "高雄市鳳山區"
+  address: "高雄市鳳山區中山西路364-1號16樓"
+  category: "生活工藝"
+  since: "2014"
+  website: ""
+  facebook_page: "https://www.facebook.com/succulentPS"
+  preface: "致力於手作多肉植栽的工作室，將用心設計過的水泥藝術，結合植物療癒的能量分享給大家，目前有販售多肉植株、水泥花器與相關設計商品。"
+  member_amount: "兩個年輕人、一個工作室、一塊很小的苗圃"
+  member:
+    -
+      figure_en_name: "01"
+      name: "鍾佳其"
+      intro: "負責水泥花器的創意開發，以及品牌視覺設計。"
+    -
+      figure_en_name: "02"
+      name: "張簡駿赫"
+      intro: "負責多肉植物栽培，植物相關養護知識。"
+-
+  en_name: "phdsausage"
+  slogan: "博士生用在地食材做出天然的美味香腸"
+  name: "博士香腸"
+  video: false
+  map: "keelungcity"
+  location: "基隆市"
+  address: "基隆市中正區北寧路二號海洋大學"
+  category: "在地滋味"
+  since: "2014"
+  website: ""
+  facebook_page: "https://www.facebook.com/pages/%E5%8D%9A%E5%A3%AB%E9%A6%99%E8%85%B8/1585129038385292?fref=ts"
+  preface: "海洋大學學生創業團隊在教育部智慧生活創新創業育成平台試辦計畫輔導下，成立博士香腸商行，利用在地食材，以天然的原料，不添加人工添加劑的原則開發食品，希望讓消費者吃得安心，找回食物天然的美味。"
+  member_amount: "學生微型創業"
+  member:
+    -
+      figure_en_name: "01"
+      name: "陳銘仁"
+      intro: "海洋大學海洋生物研究所博士，開發創意食品，輔導學生團隊微型創業。"
+    -
+      figure_en_name: "02"
+      name: "陳博文"
+      intro: "博士香腸商行店長，負責食品製作販售。"
