--- a/team_data.yml
+++ b/team_data.yml
@@ -578,7 +578,7 @@
   website: ""
   facebook_page: "https://www.facebook.com/DaebyDay.teafor365days"
   preface: "曾任 4A 廣告公司 account 與知名設計公司 art 十多年的兩個人，或許是厭倦了廣告設計產業的生態，來自相關領域但擁有不同專業的兩人合夥，透過一個跟茶與日子有關的創業計畫，在跌跌撞撞的創業過程中，重新發現台灣茶與在地生活的美好。"
-  member_amount: "兩個人"
+  member_amount: "12 人"
   member:
     -
       figure_en_name: "01"
@@ -702,4 +702,4 @@
     -
       figure_en_name: "01"
       name: "陳威仲"
-      intro: "拷秋勤樂團成員／激進工作室負責人/內地搖滾創辦人"
+      intro: "拷秋勤樂團成員／激進工作室負責人／內地搖滾創辦人"
