--- a/team_data.yml
+++ b/team_data.yml
@@ -1193,7 +1193,7 @@
       intro: "爸媽都是苗栗客家人的吵媽，小學時為了參加客語朗讀比賽，逼媽媽教自己學會說流利的客語。在團隊中負責客語教學資料蒐集，與吵爸結婚後嚴厲地督促客語講很爛的吵爸持續學習。"
 -
   en_name: "huadongfruit"
-  slogan: "扮演農民的經紀人，打造在地農產新通路"
+  slogan: "扮演農民的經紀人，打造花東農產新通路"
   name: "花東菜市集"
   video: "https://www.youtube.com/watch?v=yx3y8b3gkaE"
   map: "hualien"
