--- a/team_data.yml
+++ b/team_data.yml
@@ -1009,7 +1009,7 @@
     -
       figure_en_name: "02"
       name: "林欣諒"
-      intro: "高雄人，十年以上製作皮件經驗，2013 年高雄 CAD 城市精品得獎者。有信心帶領 SWEETBURDEN 在國際精品皮建舞台上發光發熱。"
+      intro: "高雄人，十年以上製作皮件經驗，2013 年高雄 CAD 城市精品得獎者。有信心帶領 SWEETBURDEN 在國際精品皮件舞台上發光發熱。"
     -
       figure_en_name: "03"
       name: "王婉諭"
